# obstacle_detector

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
include/obstacle_detector/: obstacle_projector.h  obstacle_publisher.h  obstacle_tracker.h
launch/: roahm_detecor.launch  roahm_detecor.launch.backup  roahm_detecor.launch~  roahm_detecor_offline.launch  roahm_detecor_offline.launch~
resources/: roahm_obstacle_detector.rviz
src/: obstacle_extractor.cpp  obstacle_projector.cpp  obstacle_publisher.cpp  obstacle_tracker.cpp  pred.cpp  pred.cpp~  pred.h
src/nodelets/: obstacle_projector.cpp~  obstacle_projector_nodelet.cpp  obstacle_projector_nodelet.cpp~
src/nodes/: obstacle_projector_node.cpp  pred.cpp
