<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>1.2.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans. Then track circle obstacles for pedestrian tracking.</description>
  <maintainer email="fanbu@umich.edu">Fan Bu</maintainer>
  <author>Original Author: Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
